--- a/site/index.html
+++ b/site/index.html
@@ -22,7 +22,7 @@ layout: home
       <div class="col-6 mx-auto col-md-6 order-md-2">
         一龍
       </div>
-      <img src="/Users/oshiro.work/Desktop/写真/b3d739e2-940c-44e8-b129-0762adb8e110.jpeg" class="img-rounded" alt="Cinque Terre"> 
+      <img src="" class="img-rounded" alt="Cinque Terre"> 
       <img src="/Users/oshiro.work/Desktop/写真/b3d739e2-940c-44e8-b129-0762adb8e110.jpeg" class="img-circle" alt="Cinque Terre" width="304" height="236"> 
 
       <div class="col-md-6 order-md-1 text-center text-md-left pr-md-5">
